; ModuleID = '/home/carl/AnghaBench/libgit2/tests/checkout/extr_crlf.c_test_checkout_crlf__detect_crlf_autocrlf_true_utf8.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/checkout/extr_crlf.c_test_checkout_crlf__detect_crlf_autocrlf_true_utf8.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32 }

@GIT_CHECKOUT_OPTIONS_INIT = common dso_local global %struct.TYPE_4__ zeroinitializer, align 4
@GIT_CHECKOUT_FORCE = common dso_local global i32 0, align 4
@g_repo = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [14 x i8] c"core.autocrlf\00", align 1
@.str.1 = private unnamed_addr constant [18 x i8] c"refs/heads/master\00", align 1
@.str.2 = private unnamed_addr constant [25 x i8] c"./crlf/few-utf8-chars-lf\00", align 1
@FEW_UTF8_CRLF_RAW = common dso_local global i32 0, align 4
@.str.3 = private unnamed_addr constant [26 x i8] c"./crlf/many-utf8-chars-lf\00", align 1
@MANY_UTF8_CRLF_RAW = common dso_local global i32 0, align 4
@.str.4 = private unnamed_addr constant [27 x i8] c"./crlf/few-utf8-chars-crlf\00", align 1
@.str.5 = private unnamed_addr constant [28 x i8] c"./crlf/many-utf8-chars-crlf\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @test_checkout_crlf__detect_crlf_autocrlf_true_utf8() #0 {
  %1 = alloca %struct.TYPE_4__, align 4
  %2 = bitcast %struct.TYPE_4__* %1 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 4 %2, i8* align 4 bitcast (%struct.TYPE_4__* @GIT_CHECKOUT_OPTIONS_INIT to i8*), i64 4, i1 false)
  %3 = load i32, i32* @GIT_CHECKOUT_FORCE, align 4
  %4 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %1, i32 0, i32 0
  store i32 %3, i32* %4, align 4
  %5 = load i32, i32* @g_repo, align 4
  %6 = call i32 @cl_repo_set_bool(i32 %5, i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str, i64 0, i64 0), i32 1)
  %7 = load i32, i32* @g_repo, align 4
  %8 = call i32 @git_repository_set_head(i32 %7, i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str.1, i64 0, i64 0))
  %9 = load i32, i32* @g_repo, align 4
  %10 = call i32 @git_checkout_head(i32 %9, %struct.TYPE_4__* %1)
  %11 = load i32, i32* @FEW_UTF8_CRLF_RAW, align 4
  %12 = call i32 @check_file_contents(i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str.2, i64 0, i64 0), i32 %11)
  %13 = load i32, i32* @MANY_UTF8_CRLF_RAW, align 4
  %14 = call i32 @check_file_contents(i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str.3, i64 0, i64 0), i32 %13)
  %15 = load i32, i32* @FEW_UTF8_CRLF_RAW, align 4
  %16 = call i32 @check_file_contents(i8* getelementptr inbounds ([27 x i8], [27 x i8]* @.str.4, i64 0, i64 0), i32 %15)
  %17 = load i32, i32* @MANY_UTF8_CRLF_RAW, align 4
  %18 = call i32 @check_file_contents(i8* getelementptr inbounds ([28 x i8], [28 x i8]* @.str.5, i64 0, i64 0), i32 %17)
  ret void
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #1

declare dso_local i32 @cl_repo_set_bool(i32, i8*, i32) #2

declare dso_local i32 @git_repository_set_head(i32, i8*) #2

declare dso_local i32 @git_checkout_head(i32, %struct.TYPE_4__*) #2

declare dso_local i32 @check_file_contents(i8*, i32) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
